<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.yasincidemcarto.androidtest.ui.MainViewModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:layout_width="24dp"
            android:layout_height="6dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/map_toolbar_background"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="1dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/searchPoiView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:alpha="0.7"
                    android:src="@drawable/ic_search_black"
                    app:layout_constraintBottom_toBottomOf="@+id/searchEditText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/searchEditText" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/searchEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:alpha="0.7"
                    android:background="@null"
                    android:hint="@string/search_hint"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:text="@{viewmodel.searchQuery}"
                    app:layout_constraintBottom_toBottomOf="@+id/progressBar"
                    app:layout_constraintEnd_toStartOf="@+id/progressBar"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="@+id/progressBar" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:indeterminateTint="@color/blue"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/searchEditText"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/light_grey"/>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent">
            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmerFrameLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <include layout="@layout/shimmer_placeholder_layout" />

                    <include layout="@layout/shimmer_placeholder_layout" />

                    <include layout="@layout/shimmer_placeholder_layout" />

                    <include layout="@layout/shimmer_placeholder_layout" />

                    <include layout="@layout/shimmer_placeholder_layout" />

                    <include layout="@layout/shimmer_placeholder_layout" />

                    <include layout="@layout/shimmer_placeholder_layout" />

                    <include layout="@layout/shimmer_placeholder_layout" />

                    <include layout="@layout/shimmer_placeholder_layout" />

                    <include layout="@layout/shimmer_placeholder_layout" />

                    <include layout="@layout/shimmer_placeholder_layout" />

                    <include layout="@layout/shimmer_placeholder_layout" />

                    <include layout="@layout/shimmer_placeholder_layout" />

                    <include layout="@layout/shimmer_placeholder_layout" />

                    <include layout="@layout/shimmer_placeholder_layout" />
                </LinearLayout>
            </com.facebook.shimmer.ShimmerFrameLayout>

            <ImageView
                android:id="@+id/notFoundImage"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="120dp"
                android:src="@drawable/ic_not_found"
                android:visibility="gone"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listOfPoiRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rrr"
                tools:context=".ui.fragment.PoiListDialogFragment"
                tools:listitem="@layout/item_search_poi" />
        </FrameLayout>

    </LinearLayout>

</layout>