...
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Sydney Harbour Bridge" />

        <TextView
            android:id="@+id/poi_start_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
...
            android:textSize="14sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/time"
            app:layout_constraintStart_toEndOf="@+id/time"
            tools:text="3min (200m)" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/navigate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
...
