...
        app:behavior_peekHeight="100dp"
        app:behavior_hideable="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        style="@style/CustomBottomSheet">

        <TextView
            android:id="@+id/poi_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
...
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/grey"
            android:textSize="13sp"
            android:text="@{viewmodel.selectedPoint.region}"
            app:layout_constraintBottom_toTopOf="@+id/directions"
            app:layout_constraintEnd_toEndOf="@+id/poi_description"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/poi_description"
            app:layout_constraintTop_toBottomOf="@+id/poi_description"
            tools:text="SYD_MET" />

...
