...
    app:layout_insetEdge="bottom"
    app:behavior_peekHeight="100dp"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/navigation_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navigating"
        android:textColor="@color/purple_500"
        android:textSize="24sp"
        android:textStyle="bold"
...
